--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -44,7 +44,7 @@ jobs:
       uses: ludeeus/action-shellcheck@master
       with:
         severity: error
-        ignore_paths: packages/engines/new-engine-template
+        ignore_paths: ./packages/engines/new-engine-template
 
     # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
     # If this step fails, then you should remove it and run the build manually (see below)
