--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -45,7 +45,7 @@ jobs:
       with:
         severity: error
         ignore_paths: packages/engines/new-engine-template 
-        ignore_names: packages/cdk/lib/artifacts/batch-artifacts/ecs-additions/awscli-shim.sh
+        ignore_names: awscli-shim.sh
 
     # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
     # If this step fails, then you should remove it and run the build manually (see below)
